# pii-scanner

./: .deployment  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  startup.sh
.github/workflows/: azure-webapp.yml  main_personaldata.yml
app/: __init__.py  auth.py  azure_services.py  config.py  db.py  extractors.py  models.py  office_images.py  pii_rules.py  report_export.py  routes.py  scanner.py  secret_settings.py  security.py  url_security.py  usage_control.py
data/: whitelist.json
examples/: sample_data.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
pii_scanner/: __init__.py  cli.py  settings.py
pii_scanner/ai/: __init__.py  azure_language.py  enhance.py  text_source.py
pii_scanner/detectors/: __init__.py  address.py  bank_account.py  base.py  context_name.py  credit_card.py  date_of_birth.py  email.py  ip_address.py  license_plate.py  name.py  nhi_card.py  passport.py  phone.py  surname_data.py  surname_name.py  taiwan_id.py  (+1 more)
tests/: conftest.py  test_admin_azure_ai.py  test_archive_and_sitemap.py  test_auth_proxy.py  test_azure_ai.py  test_context_name.py  test_detectors.py  test_document_reader.py  test_excel_scan_fix.py  test_hardening.py  test_limits.py  test_preview_and_ocr.py  test_public_disclosure.py  test_report_export.py  test_source_summary.py  test_spreadsheet_text.py  test_surname_name.py  test_surname_whitelist.py  test_upload_detection_engine.py  test_usage_control.py  test_web_scanner.py  test_website_review_app.py  test_whitelist.py
(+22 files in other folders)
