[project]
name = "school-pii-checker"
version = "0.1.0"
description = "Flask app for checking school public website files for personal data risk."
requires-python = ">=3.9"
dependencies = [
  "Flask>=3.0.0",
  "Flask-Cors>=4.0.0",
  "gunicorn>=21.2.0",
  "python-dotenv>=1.0.1",
  "requests>=2.31.0",
  "pypdf>=4.2.0",
  "python-docx>=1.1.2",
  "python-pptx>=0.6.23",
  "openpyxl>=3.1.2",
  "Pillow>=10.3.0",
  "python-magic>=0.4.27; platform_system != 'Windows'",
  "msal>=1.31.0",
  "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "ruff>=0.4.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py39"
